Fix Fieldset spacing

--- a/packages/css/src/form/fieldset/fieldset.css
+++ b/packages/css/src/form/fieldset/fieldset.css
@@ -6,6 +6,7 @@
 .hds-fieldset {
   display: flex;
   flex-flow: column nowrap;
+  gap: var(--hds-spacing-8);
   border: 0;
   padding: 0;
 
@@ -16,7 +17,7 @@
   & .hds-fieldset__legend,
   & .hds-fieldset__legend--default {
     padding: 0;
-    margin-bottom: var(--hds-spacing-4);
+    margin-bottom: var(--hds-spacing-8);
     transition: color var(--hds-micro-animation-duration-quick)
       var(--hds-micro-animation-easing-normal);
     font: var(--hds-typography-caption);
@@ -29,6 +30,6 @@
   & .hds-fieldset__input-wrapper {
     display: flex;
     flex-flow: column nowrap;
-    gap: var(--hds-spacing-4);
+    gap: var(--hds-spacing-8);
   }
 }
